fix(core/menu): adjust spacing of menu-button and app-switch (#1040)

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -151,6 +151,11 @@ $menu-expanded-width: 16rem;
     margin: 0.5rem 0 0 0.5rem;
   }
 
+  .menu-buttons .burger-menu,
+  .menu-buttons .app-switch {
+    margin-left: 0.125rem;
+  }
+
   .menu-buttons > :last-child {
     margin-bottom: 1rem;
   }
